tests/fixtures/invalid/list_div_set.py
# Cannot divide List[int] and Set[int]
x: float = [1, 2, 3] / {1, 2, 3}
